testNotAnotherAnimeTheme.theme.css

--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://i.imgur.com/j1Z6HVc.jpg);
+  --theme-background-image: urlhttps://www.siliconera.com/wp-content/uploads/2023/06/honkai-star-rail-silver-wolf-you-got-hacked-twitter-event-starts.jpeg?fit=710%2C400);
 
   /*
     Main Theme Color
