--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -1,8 +1,8 @@
 /**
-* @name NotAnotherAnimeTheme
+* @name Testeditnotanotheranimetheme
 * @author puckzxz#2080
 * @version 3.2
-* @description An easily customizable and automatically updating theme
+* @description A custom theme made by WubzyGD#8766's theme generator at https://wubzy.xyz/util/theme based on Puckzxz's NotAnotherAnimeTheme
 * @invite FdZhbjY
 * @source https://github.com/puckzxz/NotAnotherAnimeTheme
 * @updateUrl https://raw.githubusercontent.com/puckzxz/NotAnotherAnimeTheme/master/NotAnotherAnimeTheme.theme.css
@@ -10,195 +10,131 @@
 
 @import url(https://puckzxz.github.io/NotAnotherAnimeTheme/build/v3/naat.v3.css);
 
-/*
-  To make editing this theme easier I recommend using Notepad++
-  you can download it for free here https://notepad-plus-plus.org/download/
-*/
+/* 
+ * =========================================
+ * Created using Wubzy.xyz's theme generator
+ * Questions about the theme or generator? Bugs or suggestions?
+ * Join NotAnotherAnimeTheme's support server at https://discord.gg/FdZhbjY
+ * Feedback is always welcome!
+ * 
+ * Hope you like your theme! ^^
+ * =========================================
+ */
 
-/* Any images you use MUST end with .jpg or .png or any other image extension */
+/*Generated at Thu, 06 Jul 2023 21:41:05 GMT -> Generator version Beta - 1.1.3*/
 
 :root {
-  /*
-    Theme Background
-  */
-  --theme-background-image: urlhttps://www.siliconera.com/wp-content/uploads/2023/06/honkai-star-rail-silver-wolf-you-got-hacked-twitter-event-starts.jpeg?fit=710%2C400);
 
-  /*
-    Main Theme Color
-  */
-  --main-theme-color: rgb(67, 181, 129);
-
-  /*
-    Main Theme Transparency
-  */
-  --theme-transparency: rgba(0, 0, 0, 0.8);
-
-  /*
-    Home Icon Image
-  */
-  --home-icon-image: url(https://i.imgur.com/63g6Em8.jpg);
-
-  /*
-    Change your friends icon image position
-  */
+  /*[MAIN THEME SETTINGS]*/
+  /*Some important settings that will change the majority of your client.*/
+  --theme-background-image: url(https://www.siliconera.com/wp-content/uploads/2023/06/honkai-star-rail-silver-wolf-you-got-hacked-twitter-event-starts.jpeg?fit=710%2C400); /*The main image over your whole Discord client*/
+  --main-theme-color: #; /*The default theme color*/
+  --theme-transparency: rgba(0, 0, 0, 0.7); /*The mask that applies over the background*/
+  --home-icon-image: url(https://i.imgur.com/63g6Em8.jpg); /*Your friends icon*/
   --home-icon-image-position: center center;
-
-  /*
-    Change your friends icon image zoom
-  */
   --home-icon-image-zoom: 100%;
 
   /*
     Server Listing Width
-    Single Column:  62px
+    Single Column:  72px
     Double Column:  126px
     Triple Column:  184px
     Quad Column:    242px
+    Pentad Column:  304px
   */
-  --server-listing-width: 126px;
+  /*[SERVER LISTING]*/
+  /*The number of columns in your server listing.*/
+  --server-listing-width: 184px;
 
-  /*
-    Font Size
-  */
+  /*[FONT SIZE]*/
   --font-size: 100%;
 
-  /*
-    Mention colors
-  */
-  --mention-color: rgba(250, 166, 26, 0.05);
-  --mention-sider: rgba(250, 166, 26, 1);
-  --mention-hover-color: rgba(250, 166, 26, 0.08);
+  /*[MENTION COLORS]*/
+  --mention-color: #4b; /*The color messages that mention you will highlight in*/
+  --mention-sider: #7f; /*The small bar on the left of a message that mentions you*/
+  --mention-hover-color: #5f; /*The color a mention highlight changes to when you hover over it*/
 
-  /*
-    Server category hover color
-  */
-  --category-hover-color: rgb(60, 202, 138);
+  --category-hover-color: #5f; /*Color that categories change to when hovered over*/
 
-  /*
-    Change the unread server animation.
-    Replace it with "none" in order to remove any animations and use the main color instead
-  */
-  --unread-server-animation: rainbow;
+  --unread-server-animation: rainbow; /*The color animation that appears over server icons with unreads. Best to leave this be.*/
 
-  /*
-    Video / Screen share buttons
-  */
+  /*[VIDEO PLAYER]*/
   --video-screen-button-background-color: rgba(200, 200, 200, 0.2);
   --video-screen-button-foreground-color: white;
   --video-screen-button-background-hovor-color: rgba(200, 200, 200, 0.4);
   --video-screen-button-foreground-hovor-color: white;
 
-  /*
-    Role Title Color
-  */
   --member-listing-role-color: var(--main-theme-color);
 
-  /*
-    Small User Popout
-  */
-  --small-user-popout-background-image: var(--theme-background-image);
-  --small-user-popout-background-transparency: rgba(0, 0, 0, 0.6);
+  /*[USER POPOUTS]*/
+  /*The settings for the popouts when you click on a user in the members list (small popout) and when you click the "profile" button on a user (big popout)*/
+  /*Similar to main theme settings.*/
+  --small-user-popout-background-image: url(https://www.siliconera.com/wp-content/uploads/2023/06/honkai-star-rail-silver-wolf-you-got-hacked-twitter-event-starts.jpeg?fit=710%2C400);
+  --small-user-popout-background-transparency: rgba(0,0,0, 0.7);
   --small-user-popout-background-image-position: center;
 
-  /*
-    Big User Popout
-  */
-  --big-user-popout-background-image: var(--theme-background-image);
-  --big-user-popout-background-transparency: rgba(0, 0, 0, 0.6);
+  --big-user-popout-background-image: url(https://www.siliconera.com/wp-content/uploads/2023/06/honkai-star-rail-silver-wolf-you-got-hacked-twitter-event-starts.jpeg?fit=710%2C400);
+  --big-user-popout-background-transparency: rgba(0,0,0, 0.7);
   --big-user-popout-background-image-position: center;
 
-  /*
-    Code Markup
-  */
-  --code-markup-background-color: rgba(0, 0, 0, 0.6);
-  --code-markup-border: 1px solid transparent;
+  /*[CODE BLOCKS]*/
+  --code-markup-background-color: rgba(0, 0, 0, 0.6); /*Code blocks background color*/
+  --code-markup-border: 1px solid transparent; /*An optional border around code blocks (defaults to transparent - or invisible)*/
 
-  /*
-    Message Box Transparency
-  */
-  --message-box-transparency: rgba(0, 0, 0, 0.6);
+  --message-box-transparency: rgba(0, 0, 0, 0.6); /*The message box at the bottom. Change the first three values to edit its color, and the last to edit its transparency*/
 
-  /*
-    Embed Background Transparency
-  */
   --embed-background-transparency: rgba(0, 0, 0, 0.6);
 
-  /*
-    Message Hover Buttons
-  */
-  --message-hover-buttons-background: rgba(200, 200, 200, 0.1);
+  --message-hover-buttons-background: rgba(200, 200, 200, 0.1); /*The small box that appears around the edit, pin, delete, etc icons when you hover over a message*/
 
-  /*
-    Context Menu Transparency
-  */
+  /*[ADVANCED SETTINGS]*/
+  /*This stuff is more on the advanced/nitty-gritty side. Most of the names are pretty self-explanatory.*/
+
   --context-menu-transparency: rgba(15, 15, 15, 0.8);
 
-  /*
-    Add Server / Discovery Icon
-  */
   --add-discover-icon-transparency: rgba(200, 200, 200, 0.15);
   --add-discover-icon-color: #43b581;
 
-  /*
-    Channel Limit Number Color
-  */
   --channel-limit-count-color: var(--channels-default);
   --channel-limit-background-left: rgba(200, 200, 200, 0.1);
   --channel-limit-background-right: rgba(200, 200, 200, 0.2);
 
-  /*
-    Scrollbar Colors
-  */
-  --scrollbar-color: rgba(200, 200, 200, 0.2);
+  --scrollbar-color: #89;
 
-  /*
-    Unread Message Divider
-  */
   --unread-message-divider-color: #f04747;
   --unread-message-divider-font-color: #fff;
 
-  /*
-    New Messages Bar Color
-  */
-  --new-messages-bar-background-color: #7289da;
+  --new-messages-bar-background-color: var(--main-theme-color); /*The bar atop the screen saying "x new messages" when you're in a channel with unreads*/
   --new-messages-bar-font-color: #fff;
 
-  /*
-    Emoji Menu
-  */
   --emoji-menu-background-color: rgba(0, 0, 0, 0.6);
   --emoji-menu-sider-background-color: rgba(0, 0, 0, 0);
   --emoji-menu-server-header-background-color: rgba(0, 0, 0, 0.8);
   --emoji-menu-bottom-bar-background-color: black;
   --emoji-menu-search-bar-background-color: rgba(200, 200, 200, 0.1);
 
-  /*
-    Message Search
-  */
   --message-search-menu-background-color: rgba(0, 0, 0, 0.8);
   --message-search-container-background-color: rgba(0, 0, 0, 0.6);
   --message-search-result-background-color: rgba(200, 200, 200, 0.05);
 
-  /*
-    Channel colors
-  */
   --text-voice-channel-color: rgb(142, 146, 151);
   --text-voice-channel-hover-color: #dcddde;
   --text-voice-channel-selected-text-color: #fff;
-  --unread-text-channel-color: #fff;
-  --unread-text-channel-bubble-color: var(--main-theme-color);
+  --unread-text-channel-color: #;
+  --unread-text-channel-bubble-color: #;
 
-  /*
-    Folders
-  */
   --folder-background-color: #2f3136;
   --expanded-folder-background-color: transparent;
 
-  /*
-    Reactions
-  */
   --reaction-emoji-background-color: rgba(0, 0, 0, 0);
   --reaction-emoji-border-color: 1px solid transparent;
   --reaction-emoji-hover-background-color: rgba(255, 255, 255, 0.1);
   --reaction-emoji-hover-border-color: rgba(255, 255, 255, 0.2);
 }
+
+/*Changes the way popout background images apply to account for any size mismatching.*/
+.root-3QyAh1 {background-size: cover;} /*Large popout*/
+.userPopout-xaxa6l {background-size: cover;} /*Small popout*/
+
+/*Make the Channel Tabs plugin background invisible so it's flush with your theme's background*/
+.channelTabs-tabContainer, .channelTabs-container {background: 0 0!important; background-color: initial !important;}
