--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://i.imgur.com/j1Z6HVc.jpg);
+  --theme-background-image: url(https://wallpapercave.com/wp/wp8650341.png);
 
   /*
     Main Theme Color
@@ -36,7 +36,7 @@
   /*
     Home Icon Image
   */
-  --home-icon-image: url(https://i.imgur.com/63g6Em8.jpg);
+  --home-icon-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.myanimelist.net%2Fimages%2Fcharacters%2F10%2F488467.jpg&f=1&nofb=1&ipt=5160e295b6211362198ef1d6e98eeec6302dc6e2df438c683a6db16fb30f9588&ipo=images);
 
   /*
     Change your friends icon image position
