--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -28,7 +28,7 @@
   /*[MAIN THEME SETTINGS]*/
   /*Some important settings that will change the majority of your client.*/
   --theme-background-image: url(https://w.wallhaven.cc/full/p9/wallhaven-p955gm.jpg); /*The main image over your whole Discord client*/
-  --main-theme-color: #2b5881; /*The default theme color*/
+  --main-theme-color: #057885; /*The default theme color*/
   --theme-transparency: rgba(29, 56, 65, 0.76); /*The mask that applies over the background*/
   --home-icon-image: url(https://www.youloveit.com/uploads/posts/2023-12/1702568534_youloveit_com_honkai_star_rail_winter_icons3.jpg); /*Your friends icon*/
   --home-icon-image-position: center center;
@@ -44,7 +44,7 @@
   */
   /*[SERVER LISTING]*/
   /*The number of columns in your server listing.*/
-  --server-listing-width: 72px;
+  --server-listing-width: 126px;
 
   /*[FONT SIZE]*/
   --font-size: 100%;
