--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -29,7 +29,7 @@
   /*Some important settings that will change the majority of your client.*/
   --theme-background-image: url(https://w.wallhaven.cc/full/p9/wallhaven-p955gm.jpg); /*The main image over your whole Discord client*/
   --main-theme-color: #f9dbdb; /*The default theme color*/
-  --theme-transparency: #18558dab; /*The mask that applies over the background*/
+  --theme-transparency: rgba(24, 85, 141, 0.67); /*The mask that applies over the background*/
   --home-icon-image: url(https://www.youloveit.com/uploads/posts/2023-12/1702568534_youloveit_com_honkai_star_rail_winter_icons3.jpg); /*Your friends icon*/
   --home-icon-image-position: center center;
   --home-icon-image-zoom: 100%;
@@ -99,7 +99,7 @@
   --channel-limit-background-left: rgba(255, 143, 171, 0.507);
   --channel-limit-background-right: rgba(255, 143, 171, 0.507);
 
-  --scrollbar-color: #ecaac5;
+  --scrollbar-color: rgba(236, 170, 197, 1);
 
   --unread-message-divider-color: #f04747;
   --unread-message-divider-font-color: #fff;
@@ -117,10 +117,10 @@
   --message-search-container-background-color: rgba(0, 0, 0, 0.6);
   --message-search-result-background-color: rgba(200, 200, 200, 0.05);
 
-  --text-voice-channel-color: rgb(142, 146, 151);
+  --text-voice-channel-color: rgb(19, 76, 145);
   --text-voice-channel-hover-color: #dcddde;
   --text-voice-channel-selected-text-color: #fff;
-  --unread-text-channel-color: #422A82;
+  --unread-text-channel-color: #0e0bc4;
   --unread-text-channel-bubble-color: #422A82;
 
   --folder-background-color: #2f3136;
