--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -28,7 +28,7 @@
   /*[MAIN THEME SETTINGS]*/
   /*Some important settings that will change the majority of your client.*/
   --theme-background-image: url(https://w.wallhaven.cc/full/p9/wallhaven-p955gm.jpg); /*The main image over your whole Discord client*/
-  --main-theme-color: #f9dbdb; /*The default theme color*/
+  --main-theme-color: #dda5a5; /*The default theme color*/
   --theme-transparency: rgba(24, 85, 141, 0.67); /*The mask that applies over the background*/
   --home-icon-image: url(https://www.youloveit.com/uploads/posts/2023-12/1702568534_youloveit_com_honkai_star_rail_winter_icons3.jpg); /*Your friends icon*/
   --home-icon-image-position: center center;
