--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://i.imgur.com/thqRLgK.png);
+  --theme-background-image: url(https://steamuserimages-a.akamaihd.net/ugc/1857171961488542764/81CA006B3FADCFC4BE20CFEE1CC28E60125528FD/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false);
 
   /*
     Main Theme Color
