Fix transparency issues

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -1214,3 +1214,11 @@ html {
 .modeUnreadImportant_d8bfb3 .name_d8bfb3 {
   color: var(--unread-text-channel-color);
 }
+
+.wrapper_b75bb9 {
+  background: transparent;
+}
+
+.container_a6d69a {
+  background: transparent;
+}
