Adjust to new class names

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -291,7 +291,7 @@
   margin-left: 2px;
 }
 
-.wrapper_fd07a3 {
+.wrapper_c4cd66 {
   height: 54px;
   width: 54px;
 }
@@ -323,7 +323,7 @@
   }
 }
 
-.item_fd07a3 {
+.item_c4cd66 {
   animation: var(--unread-server-animation) 3s linear infinite;
   border: 2px solid var(--main-theme-color);
   background: transparent;
@@ -342,11 +342,11 @@
 .wrapper_fea3ef
   .scroller_fea3ef
   > div.listItem-GuPuDH:nth-child(1)
-  .item_fd07a3 {
+  .item_c4cd66 {
   opacity: 0 !important;
 }
 
-.item_fd07a3:not([style*="height: 8px"]) {
+.item_c4cd66:not([style*="height: 8px"]) {
   border-color: transparent;
   background-color: initial;
 }
@@ -778,7 +778,7 @@
   background-color: var(--message-search-result-background-color);
 }
 
-.wrapper_fd07a3 {
+.wrapper_c4cd66 {
   overflow: visible;
 }
 
@@ -791,7 +791,7 @@
   div
   .listItem-GuPuDH
   .pill_f36a5a
-  .item_fd07a3 {
+  .item_c4cd66 {
   opacity: 0 !important;
 }
 
@@ -930,7 +930,7 @@ html {
   background-color: rgb(0, 0, 0, 0);
 }
 
-.pill_f36a5a .item_fd07a3 {
+.pill_f36a5a .item_c4cd66 {
   opacity: 0 !important;
 }
 
@@ -1220,5 +1220,13 @@ html {
 }
 
 .container_a6d69a {
+  background: transparent;
+}
+
+.container_fc4f04 {
+  --__header-bar-background: transparent;
+}
+
+.theme-dark .themed_fc4f04 {
   background: transparent;
 }
