Fix code blocks

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -648,7 +648,7 @@
 }
 
 /* Code Markup */
-.markup_d6076c code {
+.markup_f8f345 code {
   background: var(--code-markup-background-color);
   border: var(--code-markup-border);
 }
