Fix embed transparency

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -237,7 +237,7 @@
 }
 
 /* EMBEDS */
-.embedFull_ad0b71 {
+.embedFull_b0068a {
   border-left: 4px solid var(--main-theme-color);
   background: var(--embed-background-transparency);
 }
