Fix channel category colors

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -463,8 +463,8 @@
 
 /* Channel category color */
 .wrapper_a08117:not(.muted_a08117)
-  .name_a08117.container-q97qHp
-  .overflow_c74e70 {
+  .name_a08117.container_a5ad5c
+  .overflow_a82120 {
   color: var(--main-theme-color);
 }
 
