Fix theme footer

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -1254,3 +1254,11 @@ html {
 .button_df39bd {
   background: var(--message-box-transparency);
 }
+
+.footer_aa1bff {
+  background-color: transparent;
+}
+
+.gradient_aa1bff {
+  background-color: transparent;
+}
