Fix message box transparency

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -192,6 +192,10 @@
   background-color: var(--message-box-transparency) !important;
 }
 
+.scrollableContainer_bdf0de {
+  background-color: var(--message-box-transparency) !important;
+}
+
 .theme-dark .form_a7d72e:before {
   background: transparent;
 }
