Fix class names

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -1266,3 +1266,12 @@ html {
 .gradient_aa1bff {
   background-color: transparent;
 }
+
+.footer_f8ec41 {
+  background-color: transparent;
+}
+
+.gradient_f8ec41 {
+  background-color: transparent;
+}
+
