Fix discovery icon again

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -1275,3 +1275,11 @@ html {
   background-color: transparent;
 }
 
+.footer_d71945 {
+  background-color: transparent;
+}
+
+.gradient_d71945 {
+  background-color: transparent;
+}
+
