Fix chat sidebar transparency

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -1283,3 +1283,10 @@ html {
   background-color: transparent;
 }
 
+.channelChatWrapper_d880dc {
+  background-color: transparent;
+}
+
+.resizeHandle_d1c246 {
+  background-color: transparent;
+}
