--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -194,6 +194,10 @@
     width: initial;
   }
 
+  .stack_dbd263.scroller_ef3116.none_d125d2.scrollerBase_d125d2:last-child .listItem__650eb .pill__5bc7e {
+    display: none !important;
+  }
+
   .wrapper__48112.isExpanded__48112 .listItem__650eb {
     width: 100% !important;
   }
@@ -257,6 +261,23 @@
     .wrapper__6e9f8
     .childWrapper__6e9f8.childWrapperNoHoverBg__6e9f8 {
     background-color: transparent;
+  }
+
+  .folderGroup__48112 {
+    width: 54px !important;
+  }
+
+  .folderGroup__48112:not(.isExpanded__48112) .listItem__650eb .pill_e5445c.wrapper__58105 .item__58105 {
+    margin-left: -3px !important;
+    width: 48px !important;
+  }
+
+  .stack_dbd263.folderGuildsList__48112 {
+    height: 100px !important;
+  }
+
+  .folderGroupBackground__48112 {
+    left: 3px;
   }
 
   .unreadMentionsIndicatorTop_ef3116 {
