Fix member list background color in thread channel

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -432,4 +432,8 @@
     background: transparent;
     backdrop-filter: blur(15px);
   }
+
+  .membersWrap_c8ffbb {
+    background-color: transparent;
+  }
 }
