Fix chat gradients

--- a/css/v3/naat-min.v3.css
+++ b/css/v3/naat-min.v3.css
@@ -238,4 +238,9 @@
   .chatGradient__36d07 {
     background: none;
   }
+
+  .chatTypingGradientAtBottom__36d07,
+  .chatTypingGradientNotAtBottom__36d07 {
+    background: none;
+  }
 }
